--- a/manuscript/CI_interactions.tex
+++ b/manuscript/CI_interactions.tex
@@ -161,7 +161,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
     \subsection*{Why do some interactions \emph{not} occur?}
 
-      We start from the perspective of a community ecologist faced with the task of describing a previously unknown interaction network. This ecologist will be interested in generating a description of the species/nodes present and the links between them~\citep{Roslin2016}.  Importantly, the information sought is conveyed by both the presence and \emph{absence} of links. Presences and absences are not, however, equally certain. An observed link definitely occurred, but there are multiple reasons why a given link may not be observed \emph{whether or not the interaction truly occurred}. In terms of the ones and zeros in a binary interaction matrix, we know that the ones are true but we cannot be sure that the zeros reflect interactions which actually do not occur. The detection of any interaction is a stochastic process. As a conceptual guide to the factors affecting this process, we describe three nested levels of uncertainty that roughly address the questions: "Could species $i$ and $j$ interact?", "Do they interact?" and "Do we observe the interaction?" (Fig.~\ref{conceptual_fig}).
+      We start from the perspective of a community ecologist faced with the task of describing a previously unknown interaction network. This ecologist will be interested in generating a description of the species/nodes present and the links between them~\citep{Roslin2016}.  Importantly, the information sought is conveyed by both the presence and \emph{absence} of links. Presences and absences are not, however, equally certain. An observed link definitely occurred, but there are multiple reasons why a given link may not be observed \emph{whether or not the interaction truly occurred}. Moreover, given an unobserved interaction in an empirical dataset, we often cannot determine why the interaction did not occur \emph{post hoc}. The detection of any interaction is a stochastic process subject to many levels of uncertainty. As a conceptual guide to the factors affecting this process, we describe three nested levels of uncertainty that roughly address the questions: "Could species $i$ and $j$ interact?", "Do they interact?" and "Do we observe the interaction?" (Fig.~\ref{conceptual_fig}). 
 
 
         \subsubsection*{Could the species interact under ideal conditions?} 
@@ -199,16 +199,16 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
         An observed interaction indicates that an interaction was feasible, occurred during sampling, and was detectable ($L = 1$, $X = 1$, and $D = 1$). An unobserved interaction could be due to any of the three sources of uncertainty ($D$, $X$, and/or $L = 0$) and it is not usually possible to identify the source in empirical data. Only the case where $L = 0$ is an interaction that never occurs --the usual interpretation of a $0$ value in an interaction matrix. It is particularly important to rule out the situations where $D=0 \cup X = 1 \cup L=1$, i.e. where the interaction occurred at the location but was not observed, and $X = 0 \cup L =1$, i.e., where the interaction is feasible but did not occur at the local site (Fig.~\ref{conceptual_fig}). An empirical ecologist will instead measure the marginal probability $P(L) = k/n$, where $k$ is the number of observed interactions and $n$ the number of observed co-occurrences. Given this information, the question becomes: how can we reduce the uncertainty around our estimated interaction probability?
 
-
+        [[move to box
         The obvious rule of thumb to reduce uncertainty is ``sample more". Increasing sample sizes will reduce uncertainty about the upper bound of the interaction probability and will also increase the probability of detecting unlikely or cryptic interactions (e.g., interactions where $L$=1 but process or detection uncertainty is high). Despite these benefits, we note that there are limits to the utility of increased sampling. Since the probability of observing the co-occurrence of two species will always be higher than the probability of observing their interaction (since the probability of interaction is conditional on both interaction partners being present), we will accumulate observations of co-occurrences faster than we will accumulate observations of interactions (Fig.~\ref{histograms}C). Thus, the more we sample, the more zeros will appear in our interaction matrix.
 
 
-        An added complication is that increased sampling will not reduce uncertainty evenly across interactions. To record an interaction between A and B, we need to identify both partners correctly (a non-trivial problem in many food webs; e.g.~\citealp{Kaartinen2011,Roslin2016}). For both molecular and rearing techniques, certain types of interactions may go unnoticed due to technical challenges~\citep{Wirta2014}. This can bias the set of recorded interactions towards those that are easier to observe~\citep{Carstensen2014,Jordano2016}.
+        An added complication is that increased sampling will not reduce uncertainty evenly across interactions. To record an interaction between A and B, we need to identify both partners correctly (a non-trivial problem in many food webs; e.g.~\citealp{Kaartinen2011,Roslin2016}). For both molecular and rearing techniques, certain types of interactions may go unnoticed due to technical challenges~\citep{Wirta2014}. This can bias the set of recorded interactions towards those that are easier to observe~\citep{Carstensen2014,Jordano2016}. [[Suggest combining approaches for better results - Jordano2016?]] ]]
 
 
         Most importantly, if two species are never observed co-occurring during several days of sampling then repeated sampling reveals nothing about their probability of interacting should they ever co-occur. Intensive sampling is, therefore, an important step towards reducing uncertainty in ecological networks but is unlikely to be enough in most cases. 
         Indeed, despite substantial improvements in recent decades, most available interaction networks are still undersampled and, moreover, are only subsets of larger communities~\citep{Jordano2016}.
-        To supplement repeated sampling efforts and reduce uncertainty around unobserved interactions, we suggest researchers use prior knowledge of the same or similar systems. Here, we outline a Bayesian approach to combining repeated sampling and prior knowledge in probabilistic networks. We then demonstrate how to construct such a probabilistic network using an intensively and repeatedly sampled empirical dataset. Finally, we show how a probabilistic understanding of a network allows us to establish confidence intervals around measures of network structure.
+        To supplement repeated sampling efforts and reduce uncertainty around unobserved interactions, we suggest researchers use prior knowledge of the same or similar systems. Here, we outline a Bayesian approach to combining repeated sampling and prior knowledge in order to assemble a metaweb. We then demonstrate this approach using an intensively and repeatedly sampled empirical dataset. Finally, we show how a probabilistic understanding of a metaweb allows us to establish confidence intervals around measures of network structure.
 
 
 \section*{Materials and methods}
@@ -276,7 +276,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
     \subsubsection*{Choosing a prior distribution}  [[expand]]
       [[expand]]
 
-      Parameters $\alpha$ and $\beta$ determine the shape of the prior distribution of $\lambda$, which follows a beta distribution. These are called hyper parameters. The prior may be chosen to be uninformative, if no external information is available, or may draw on information such as distributions of connectance across webs, degree distributions, or trait-matching functions (see \emph{Appendix S3} for details and a simple quantitative example). 
+      Parameters $\alpha$ and $\beta$ determine the shape of the prior distribution of $\lambda$, which follows a beta distribution. These are called hyper parameters and may be chosen to obtain an intentionally uninformative prior or derived using prior information to create an informed or empirical prior. The prior may be chosen to be uninformative, if no external information is available, or may draw on information such as distributions of connectance across webs, degree distributions, or trait-matching functions (see \emph{Appendix S3} for details and a simple quantitative example). 
 
 
       It is important to ensure that an informative prior accurately reflects the focal  system. For example, if the system is a large network containing many plant species and insects from different families, it is inappropriate to use a prior distribution drawn from a small network describing interactions between different genotypes of a single plant species and a set of closely-related insects. The similarity of traits across genotypes within a species means that an insect which interacts with one genotype is likely to interact with many others. Trait differences between species mean that a species-species network will likely contain fewer interactions than a genotype-species network. Similarly, highly-aggregated networks containing nodes which represent whole classes or families are likely to have very different structures than networks where most nodes represent single species as aggregated nodes are likely to have more interaction partners than single species.
@@ -306,6 +306,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
 
 
         The relevant traits and degree of trait-matching between interaction partners is likely to vary between systems~\citep{Gravel2013,Weinstein2017a}. We therefore urge caution when using a model developed for one system as the prior for another. 
+        See \emph{Appendix S3} for a simple quantitative example using degree distributions to obtain $\alpha$ and $\beta$.
 
 
       \textbf{Empirical priors} [[using data from the data in question]][[contentious]][[should these be drawn from hyperpriors or fixed for each interaction]]
@@ -314,7 +315,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
   \subsection*{An empirical example}
     [[Make the point of this clearer]]
       To illustrate the process of constructing a Bayesian network to quantify uncertainty about interactions, we use the comprehensively-sampled system of willows (\emph{Salix}), herbivorous gallers, and their natural enemies described by~\citet{Kopelke2017}. This dataset consists of a single community type sampled across Europe over 29 years and at 374 unique locations. The meta-network consists of 1,173 different interactions between 52 \emph{Salix} nodes, 92 herbivore nodes, and 126 natural enemy nodes (see \emph{Appendix S4} for details). 
-      The high spatiotemporal resolution of this dataset make it ideal for illustrating the difficulties in completely sampling a network; even with such an unusually high sampling effort, we anticipate that there will be many pairs of species which were rarely or never observed together. To show the gaps in sampling, we compared the frequencies of observed co-occurrences and interactions. We then calculated an empirical prior and computed the posterior distribution of the probability of an as-yet-unobserved interaction being feasible ($\lambda$).
+      The high spatiotemporal resolution of this dataset make it ideal for illustrating the difficulties in completely sampling a network; even with such an unusually high sampling effort, we anticipate that there will be many pairs of species which were rarely or never observed together. Using the Bayesian framework above, we can identify which potential interactions are more and less uncertain, allowing us to better predict the true structure of the metaweb. To show the gaps in sampling, we compared the frequencies of observed co-occurrences and interactions. We then calculated an empirical prior and computed the posterior distribution of the probability of an as-yet-unobserved interaction being feasible ($\lambda$).
       We analysed both the \emph{Salix}-galler and galler-natural enemy components of the network but, for brevity, present only the latter here (see~\emph{Appendix S5} for \emph{Salix}-galler results).
 
 
@@ -338,7 +339,7 @@ ecological networks; probabilistic interactions; Bayesian networks; sampling err
       Researchers usually use interaction matrices as a tool to calculate measures of network structure. Computing most network metrics is straightforward when the different $\lambda$ of the adjacency matrix are known and assumed not to vary~\citep{Poisot2016}. Incorporating variance in $\lambda$ into these calculations, however, is not so easy. Computation of these metrics involves non-linear functions. By Jensen's inequality~\citep{Jensen1906}, this means that the average of a network metric (a function of stochastic interactions) is not the same as the network metric calculated based on the average interaction probability. Any uncertainty in the values of $\lambda$ could bias both the mean and variance of network metrics, giving misleading results (simulated in \emph{Appendix S1}). One way to avoid this situation is to calculate the properties of a suite of simulated networks~\citep{Vazquez2005,Guimera209}.
 
 
-      Using the prior distributions and procedures described above, we calculated posterior probability distributions for species pairs that were not observed interacting. Using these posterior distributions and assuming probabilities of 1 for pairs of species that were observed interacting (see \emph{Appendix S2} for a justification), we created a suite of 100 webs by randomly sampling from each posterior distribution. After obtaining these posterior networks, we calculated the connectance of each web, as well as the mean number of links per galler and per natural enemy, and the nestedness (NODF) of the network. 
+      Using the prior distributions and procedures described above, we calculated posterior probability distributions for species pairs that were not observed interacting. Using these posterior distributions and assuming probabilities of 1 for pairs of species that were observed interacting (see \emph{Appendix S2} for a justification), we created a suite of 100 webs by randomly sampling from each posterior distribution. Each of these webs is a prediction of the structure of the metaweb. After obtaining these posterior networks, we calculated the connectance of each web, as well as the mean number of links per galler and per natural enemy, and the nestedness (NODF) of the network. 
 
 
       Measures of network structure which are based on empirical networks that are missing interactions may differ substantially from the values that would be obtained if detection certainty and variation in interactions over space and time could be removed. To demonstrate this, we created a suite of filtered networks for each posterior network. Taking a posterior network as the "true" network, we randomly sampled 90\%, 80\%, 70\%, 60\%, 50\%, 40\%, 30\%, 20\%, and 10\% of the interactions to create a new "filtered" network. This gradient is akin to a gradient of uncertainty in the network (e.g., due to varying sampling effort or intraspecific trait variability). For each level of uncertainty, we created 100 randomly-sampled networks per posterior-probability network (giving 100 posterior networks and 1000 filtered networks). We calculated the same network properties as described above for all posterior and filtered networks.
